personel tablosu olusturuldu crud islemleri gerceklestirildi

--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -22,6 +22,7 @@
                             <div class="navbar-nav ml-auto">
                                 <h:commandLink styleClass="nav-link"  action="/ilac/list" value="ILAC" />
                                 <h:commandLink styleClass="nav-link"  action="/hasta/list" value="HASTA" />
+                                 <h:commandLink styleClass="nav-link"  action="/personel/list" value="PERSONEL" />
                             </div>
                         </div>
                     </nav>
