Dağıtıcı firma tablosu oluşturuldu crud işlemleri yapıldı

--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -23,6 +23,7 @@
                                 <h:commandLink styleClass="nav-link"  action="/ilac/list" value="ILAC" />
                                 <h:commandLink styleClass="nav-link"  action="/hasta/list" value="HASTA" />
                                  <h:commandLink styleClass="nav-link"  action="/personel/list" value="PERSONEL" />
+                                 <h:commandLink styleClass="nav-link"  action="/firma/list" value="FIRMA" />
                             </div>
                         </div>
                     </nav>
