--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -24,6 +24,7 @@
                                 <h:commandLink styleClass="nav-link"  action="/hasta/list" value="HASTA" />
                                  <h:commandLink styleClass="nav-link"  action="/personel/list" value="PERSONEL" />
                                  <h:commandLink styleClass="nav-link"  action="/firma/list" value="FIRMA" />
+                                  <h:commandLink styleClass="nav-link"  action="/odeme/list" value="ODEME" />
                             </div>
                         </div>
                     </nav>
