--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -25,6 +25,7 @@
                                  <h:commandLink styleClass="nav-link"  action="/personel/list" value="PERSONEL" />
                                  <h:commandLink styleClass="nav-link"  action="/firma/list" value="FIRMA" />
                                   <h:commandLink styleClass="nav-link"  action="/odeme/list" value="ODEME" />
+                                       <h:commandLink styleClass="nav-link"  action="/alis/list" value="ALIS" />
                             </div>
                         </div>
                     </nav>
