add pagination and read and write document database

--- a/web/template/admin.xhtml
+++ b/web/template/admin.xhtml
@@ -25,12 +25,13 @@
                                 <h:commandLink styleClass="nav-link"  action="/personel/list?faces-redirect=true" value="PERSONEL" />
                                 <h:commandLink styleClass="nav-link"  action="/firma/list?faces-redirect=true" value="FIRMA" />
                                 <h:commandLink styleClass="nav-link"  action="/odeme/list?faces-redirect=true" value="ODEME" />
+                                <h:commandLink styleClass="nav-link"  action="/document/document?faces-redirect=true" value="DOKUMAN" />
 
                             </div>
                             <div class="navbar-nav ml-auto">
                                 <h:commandLink styleClass="nav-link"  action="/login/login?faces-redirect=true" value="LOGIN" />
                                 <h:commandLink styleClass="nav-link"  action="/login/logout?faces-redirect=true" value="LOGOUT" />
-                              
+
                             </div>
                         </div>
                     </nav>
